# shooter

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: constants.h  fps.cpp  fps.h  game.cpp  game.h  game_state.h  input_controller.cpp  input_controller.h  main.cpp  resource_manager.cpp  updateable.h
src/util/: fs.cpp  fs.h  resource_manager.cpp  resource_manager.h  resources_manager.cpp  resources_manager.h  text_builder.cpp  text_builder.h  timer.cpp  timer.h
src/views/: game_view.cpp  game_view.h  menu_view.cpp  menu_view.h  view.cpp  view.h
